로그인 메뉴 생성

--- a/friends.html
+++ b/friends.html
@@ -22,20 +22,14 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
-    <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
-      <p class="welcome-header__text">
-        If you gave a Kokoa Account, log in with your email or phone number.
-      </p>
-    </header>
-    <form action="friends.html" type="get" id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
-      <input type="submit" value="Log In" />
-      <input type="submit" value="Sign Up" />
-      <a href="#">Find Kokoa Account or Password</a>
-    </form>
-
+    <nav>
+      <ul>
+        <li><a href="#">Friends</a></li>
+        <li><a href="#">Chats</a></li>
+        <li><a href="#">Search</a></li>
+        <li><a href="#">Find</a></li>
+      </ul>
+    </nav>
     <script
       src="https://kit.fontawesome.com/fd98bf2f6a.js"
       crossorigin="anonymous"
