--- a/chats.html
+++ b/chats.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends - kokoa Clone</title>
+    <title>Chats - kokoa Clone</title>
     <style>
       body {
         padding-top: 25px;
@@ -28,70 +28,48 @@
       </div>
     </div>
     <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
+      <h1 class="screen-header__title">Chats</h1>
       <div class="screen-header__icon">
         <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="far fa-comment-dots fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
         <span><i class="fas fa-cog fa-lg"></i></span>
       </div>
     </header>
-    <a id="friends-display-link"
-      ><i class="fas fa-info-circle"></i>Friends' Names Display<i
-        class="fas fa-chevron-right fa-sm"
-      ></i
-    ></a>
-    <main class="friends-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            class="user-component__avatar user-component__avatar--xl"
-            src="img/초롱이.jpg"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__name">초롱이</h4>
-            <!-- <h6 class="user-component__subtitle">확대 기능 추가예정</h6>-->
-          </div>
-        </div>
-        <div class="user-component__column"></div>
-      </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>Channel</span>
-          <i class="fas fa-chevron-up fa-sm"></i>
-        </div>
+    <main class="main-screen">
+      <a href="chat.html">
         <div class="user-component">
           <div class="user-component__column">
             <img
-              class="user-component__avatar user-component__avatar--sm"
+              class="user-component__avatar user-component__avatar--xl"
               src="img/초롱이.jpg"
             />
             <div class="user-component__text">
-              <h4 class="user-component__name user-component__name--not-bold">
-                Channel
-              </h4>
+              <h4 class="user-component__name">초롱이</h4>
+              <h6 class="user-component__subtitle">
+                Please check My Kokoa Account Info
+              </h6>
             </div>
           </div>
           <div class="user-component__column">
-            <div>
-              <span>2</span>
-              <i class="fas fa-chevron-right fa-sm"></i>
-            </div>
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-      </div>
+      </a>
     </main>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="fas fa-user fa-2x"></i
+            ><i class="far fa-user fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html"
             ><span class="nav__notification badge">1</span
-            ><i class="far fa-comment fa-2x"></i
-          ></a>
+            ><i class="fas fa-comment fa-2x"></i>
+          </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="find.html"
