--- a/friends.html
+++ b/friends.html
@@ -106,6 +106,7 @@
         </li>
       </ul>
     </nav>
+    <div id="splash-screen"><i class="fas fa-comment"></i></div>
     <script
       src="https://kit.fontawesome.com/fd98bf2f6a.js"
       crossorigin="anonymous"
