--- a/chat.html
+++ b/chat.html
@@ -74,6 +74,9 @@
         </button>
       </div>
     </form>
+    <div class="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/fd98bf2f6a.js"
       crossorigin="anonymous"
