--- a/friends.html
+++ b/friends.html
@@ -107,6 +107,10 @@
       </ul>
     </nav>
     <div id="splash-screen"><i class="fas fa-comment"></i></div>
+    <div class="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/fd98bf2f6a.js"
       crossorigin="anonymous"
