--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
       <input type="submit" value="Sign Up" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
-
+    <div class="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/fd98bf2f6a.js"
       crossorigin="anonymous"
