--- a/chat.html
+++ b/chat.html
@@ -74,7 +74,7 @@
         </button>
       </div>
     </form>
-    <div class="no-mobile">
+    <div class="no-mobile__bigScreen">
       <span>Your screen is too big</span>
     </div>
     <script
