--- a/chat.html
+++ b/chat.html
@@ -43,12 +43,12 @@
     </header>
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Tuesday, June 30, 2020</div>
-      <div class="message-row">
-        <img src="img/초롱이.jpg" alt="초롱이사진" />
+      <div class="message-row cat-chat">
+        <img src="img/초롱이.jpg" alt="초롱이사진" />        
         <div class="message-row__content">
           <span class="message__author">초롱이</span>
           <div class="message__info">
-            <span class="message__bubble">Hi!</span>
+            <span class="message__bubble">Click me!!</span>
             <span class="message__time">21:27</span>
           </div>
         </div>
@@ -56,7 +56,7 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">What's up?</span>
+            <span class="message__bubble">귀여워!!</span>
             <span class="message__time">21:27</span>
           </div>
         </div>
