--- a/find.html
+++ b/find.html
@@ -64,10 +64,10 @@
       </div>
       <div class="open-post open-post__border">
         <div class="open-post__column">
-          <h5 class="open-post__title">#BTS</h5>
-          <h6 class="open-post__hashtags">#bts#army#friends</h6>
+          <h5 class="open-post__title">#cat</h5>
+          <h6 class="open-post__hashtags">#찐빵#munchkin</h6>
           <div class="open-post__members">
-            <img src="img/초롱이.jpg" alt="" />
+            <img src="img/수리1.jpg" alt="" />
             <span class="open-post__members-count">802 members</span>
             <div class="divider"></div>
             <span class="open-post__members-status">Active</span>
@@ -75,8 +75,10 @@
         </div>
         <div class="open-post__column">
           <div class="open-post__photo">
-            <img src="img/초롱이.jpg" />
-            <div class="open-post__heart-count">
+            <div class="cat-chat">
+              <img src="img/수리1.jpg" />
+            </div>
+              <div class="open-post__heart-count">
               <i class="fas fa-heart"></i><span>365</span>
             </div>
           </div>
@@ -84,10 +86,10 @@
       </div>
       <div class="open-post">
         <div class="open-post__column">
-          <h5 class="open-post__title">#BTS</h5>
-          <h6 class="open-post__hashtags">#bts#army#friends</h6>
+          <h5 class="open-post__title">#cat</h5>
+          <h6 class="open-post__hashtags">#click#이불짤</h6>
           <div class="open-post__members">
-            <img src="img/초롱이.jpg" alt="" />
+            <img src="img/초롱이2.jpg" alt="" />
             <span class="open-post__members-count">802 members</span>
             <div class="divider"></div>
             <span class="open-post__members-status">Active</span>
@@ -95,7 +97,9 @@
         </div>
         <div class="open-post__column">
           <div class="open-post__photo">
-            <img src="img/초롱이.jpg" />
+            <div class="cat-up">
+            <img src="img/초롱이2.jpg" />
+            </div>
             <div class="open-post__heart-count">
               <i class="fas fa-heart"></i><span>365</span>
             </div>
