--- a/friends.html
+++ b/friends.html
@@ -63,7 +63,7 @@
           <div class="user-component__column">
             <img
               class="user-component__avatar user-component__avatar--sm"
-              src="img/초롱이.jpg"
+              src="img/초롱이2.jpg"
             />
             <div class="user-component__text">
               <h4 class="user-component__name user-component__name--not-bold">
