--- a/more.html
+++ b/more.html
@@ -48,7 +48,7 @@
           <div class="user-component__text">
             <h4 class="user-component__name">초롱이</h4>
             <div class="user-component__subinfo">
-              <h6 class="user-component__subtitle">확대 기능 추가예정</h6>
+              <h6 class="user-component__subtitle">Don't click</h6>
               <span class="user-component__icon">!</span>
             </div>
           </div>
