--- a/find.html
+++ b/find.html
@@ -96,10 +96,8 @@
           </div>
         </div>
         <div class="open-post__column">
-          <div class="open-post__photo">
-            <div class="cat-up">
-            <img src="img/초롱이2.jpg" />
-            </div>
+          <div class="open-post__photo cat-up">
+            <img src="img/초롱이2.jpg" /> 
             <div class="open-post__heart-count">
               <i class="fas fa-heart"></i><span>365</span>
             </div>
